--- a/app/components/Layout/style.scss
+++ b/app/components/Layout/style.scss
@@ -3,7 +3,9 @@ html, body {
 }
 body {
   background-color: #ececec;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 .wrapper {
   max-width: 1000px;
+  margin: 0 auto;
 }
