Make the header dark and remove center

--- a/app/components/Header/style.scss
+++ b/app/components/Header/style.scss
@@ -1,9 +1,20 @@
 .Header {
-  background-color: white;
-  padding: 5px;
+  background-color: #333;
+  color: #FFF;
+  padding: 20px;
+  display: flex;
+  align-items: baseline;
 }
 .Title {
-  font-weight: 400;
+  font-weight: 300;
   font-size: 2em;
-  text-align: center;
+  margin: 0;
+}
+.SubTitle {
+  font-weight: 300;
+  margin: 0;
+}
+.Spacer {
+  margin: 0 10px;
+  font-size: 2em;
 }
