Make companies list look better on mobile

--- a/app/components/Button/style.scss
+++ b/app/components/Button/style.scss
@@ -4,6 +4,7 @@
   margin: 2px;
   color: #FFF;
   text-decoration: none;
+  display: inline-block;
   &:hover {
     background-color: darken(#1e90ff, 10%)
   }
