--- a/app/components/Companies/style.scss
+++ b/app/components/Companies/style.scss
@@ -1,5 +1,16 @@
-.Table {
+.Companies {
   width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+.Company {
+  flex: 1;
+  min-width: 290px;
+  display: flex;
+  justify-content: space-between;
+  box-shadow: 0px 0px 10px -4px;
+  margin: 10px;
+  padding: 5px;
 }
 .Logo {
   max-width: 200px;
