--- a/app/components/Header/style.scss
+++ b/app/components/Header/style.scss
@@ -4,6 +4,10 @@
   padding: 20px;
   display: flex;
   align-items: baseline;
+  flex-direction: column;
+  @media(min-width: 700px) {
+    flex-direction: row;
+  }
 }
 .Title {
   font-weight: 300;
@@ -12,9 +16,18 @@
 }
 .SubTitle {
   font-weight: 300;
-  margin: 0;
+  margin: 10px 0 0;
+  font-size: 1.2em;
+  @media(min-width: 700px) {
+    font-size: 1.5em;
+    margin: 0;
+  }
 }
 .Spacer {
   margin: 0 10px;
   font-size: 2em;
+  display: none;
+  @media(min-width: 700px) {
+    display: block;
+  }
 }
