--- a/app/components/Companies/style.scss
+++ b/app/components/Companies/style.scss
@@ -4,8 +4,8 @@
   flex-wrap: wrap;
 }
 .Company {
-  flex: 1;
-  min-width: 290px;
+  flex: 1 0 290px;
+  max-width: 500px;
   display: flex;
   justify-content: space-between;
   box-shadow: 0px 0px 10px -4px;
