--- a/app/components/Countries/styles.scss
+++ b/app/components/Countries/styles.scss
@@ -8,12 +8,15 @@ $darken1: color(#9BDF46 shade(10%));
 $darken2: color(#25A55F shade(10%));
 
 .Country {
+
+}
+.Header {
   width: 100%;
   min-width: 200px;
   max-width: 300px;
   min-height: 140px;
   padding: 80px 20px 0px;
-  margin: 10px;
+  margin: 10px 0;
   font-size: 2em;
   box-shadow: 0px 0px 10px -4px;
   background: linear-gradient(to bottom, #9BDF46, #25A55F);
