--- a/app/components/City/style.scss
+++ b/app/components/City/style.scss
@@ -8,5 +8,23 @@
   overflow: hidden;
 }
 .Content {
-  line-height: 1.5em
+  line-height: 1.5em;
+  text-align: justify;
+  flex: 1
+}
+.Grid {
+  display: flex;
+  flex-direction: column;
+  @media (min-width: 800px) {
+    flex-direction: row;
+  }
+}
+.Map {
+  flex: 1;
+  width: 100%;
+  height: 450px;
+  border: 0;
+  @media (min-width: 800px) {
+    margin: 20px;
+  }
 }
