--- a/app/components/Countries/styles.scss
+++ b/app/components/Countries/styles.scss
@@ -16,3 +16,24 @@ $darken2: color(#25A55F shade(10%));
 .Header {
   font-size: 2em;
 }
+.CityImage {
+  width: 100%;
+  max-width: 400px;
+  img {
+    width: 100%;
+  }
+}
+.City {
+  font-size: 1.5em;
+  position: relative;
+  display: inline-block;
+}
+.CityHeader {
+  position: absolute;;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  background-color: white;
+  padding: 10px;
+  color: black;
+}
