--- a/app/components/Header/style.scss
+++ b/app/components/Header/style.scss
@@ -5,6 +5,7 @@
   display: flex;
   align-items: baseline;
   flex-direction: column;
+  align-items: center;
   @media(min-width: 700px) {
     flex-direction: row;
   }
@@ -30,4 +31,12 @@
   @media(min-width: 700px) {
     display: block;
   }
+}
+.LogoContainer {
+  display: flex;
+  align-items: center;
+}
+.Logo {
+  width: 60px;
+  margin-right: 5px;
 }
