--- a/app/components/Companies/style.scss
+++ b/app/components/Companies/style.scss
@@ -5,17 +5,23 @@
 }
 .Company {
   flex: 1 0 290px;
-  max-width: 500px;
+  max-width: 300px;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   box-shadow: 0px 0px 10px -4px;
   margin: 10px;
   padding: 5px;
+  text-align: center;
 }
 .Logo {
   max-width: 200px;
   padding: 10px;
+  display: inline-block;
   img {
     width: 100%;
   }
+}
+.LogoContainer {
+  text-align: center;
 }
