--- a/app/components/Companies/style.scss
+++ b/app/components/Companies/style.scss
@@ -3,3 +3,11 @@
   display: flex;
   flex-wrap: wrap;
 }
+.Sorting {
+  display: flex;
+  padding: 10px;
+  align-items: center;
+}
+.SortOption {
+  margin: 0 10px;
+}
