--- a/app/components/Newsletter/style.scss
+++ b/app/components/Newsletter/style.scss
@@ -10,7 +10,8 @@
     font-size: 20px;
     padding: 10px;
     margin: 10px 0;
-    min-width: 400px;
+    width: 100%;
+    max-width: 400px;
   }
   button {
     background-color: dodgerblue;
