--- a/app/components/Header/style.scss
+++ b/app/components/Header/style.scss
@@ -6,6 +6,7 @@
   align-items: baseline;
   flex-direction: column;
   align-items: center;
+  text-decoration: none;
   @media(min-width: 700px) {
     flex-direction: row;
   }
