Add article about lake garda

--- a/app/components/Countries/styles.scss
+++ b/app/components/Countries/styles.scss
@@ -33,6 +33,7 @@ $darken2: color(#25A55F shade(10%));
   font-size: 1.5em;
   position: relative;
   display: inline-block;
+  margin: 10px 0;
 }
 .CityHeader {
   position: absolute;;
