--- a/app/components/HelloWorld/style.scss
+++ b/app/components/HelloWorld/style.scss
@@ -4,7 +4,17 @@
   padding: 30px;
   color: #FFF;
   font-size: 1.2em;
+  min-height: 350px;
+  background-size: cover;
+  background-position-y: -40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   h1 {
     margin: 0 0 15px;
+    span {
+      background: rgba(0,0,0,0.5);
+      padding: 5px;
+    }
   }
 }
