Made the link into a button and fix the hover

--- a/app/components/Button/style.scss
+++ b/app/components/Button/style.scss
@@ -6,6 +6,6 @@
   text-decoration: none;
   display: inline-block;
   &:hover {
-    background-color: darken(#1e90ff, 10%)
+    background-color: color(#1e90ff blackness(10%));
   }
 }
