Make it possible to attach a onClick event

--- a/app/components/Button/style.scss
+++ b/app/components/Button/style.scss
@@ -5,6 +5,7 @@
   color: #FFF;
   text-decoration: none;
   display: inline-block;
+  cursor: pointer;
   &:hover {
     background-color: color(#1e90ff blackness(10%));
   }
