Linear-gradient for the menu so it doesn't look so flat

--- a/app/components/Menu/style.scss
+++ b/app/components/Menu/style.scss
@@ -1,5 +1,5 @@
 .Wrapper {
-  background: color(#1e90ff shade(30%));
+  background: linear-gradient(color(#1e90ff shade(18%)), color(#1e90ff shade(40%)));
 }
 .Links {
   max-width: 1000px;
