--- a/app/components/Main/style.scss
+++ b/app/components/Main/style.scss
@@ -10,6 +10,12 @@ h1, h2 {
   font-weight: 300;
   line-height: 1.3em;
 }
+a {
+  color: color(#1e90ff shade(18%));
+  &:hover {
+    color: color(#1e90ff shade(50%))
+  }
+}
 .wrapper {
   margin: 0 auto;
 }
