--- a/app/components/Menu/style.scss
+++ b/app/components/Menu/style.scss
@@ -24,6 +24,7 @@
       border-right: 2px solid color(#1e90ff shade(40%));
     }
     &:hover {
+      color: white;
       background: color(#1e90ff shade(50%));
     }
   }
